--- a/assets/base.less
+++ b/assets/base.less
@@ -1,15 +1,3 @@
-@import url(../../../library/bootstrap-3.3.4/less/bootstrap.less);
-
-.btn {
-    &.btn-ghost {
-        background-color: transparent;
-        color:#adadad;
-        border-color:#adadad;
-        &:hover { color:white; border-color:white; }
-    }
+.card .card-title {
+  margin-top:0; margin-bottom: 0;
 }
-.navbar-inverse { 
-    border-radius: 0; 
-    .navbar-btn { .pull-right; }
-}
-.navbar-header { margin-top:0; margin-bottom:0; }
