--- a/assets/base.less
+++ b/assets/base.less
@@ -33,6 +33,28 @@
   margin-top:0; margin-bottom: 0;
 }
 
+.page-admin {
+  .version {
+    .collapsible-header {
+      .clearfix;
+    }
+    .collapsible-body {
+      .clearfix;
+    }
+  }
+  .btn-add-forum {
+    position: relative;
+    top:-30px;
+    left:-20px;
+    margin-bottom: -35px;
+    opacity:0;
+    transition: 0.5s opacity linear;
+  }
+  .active .btn-add-forum {
+    opacity:1;
+  }
+}
+
 .post {
   position: relative;
   .row;
