new: initial setup for forum manager view with basic forum editing replicated.

--- a/assets/base.css
+++ b/assets/base.css
@@ -23,6 +23,9 @@
 .page-admin .active .btn-add-forum {
   opacity: 1;
 }
+.page-manage-forum .btn-edit-forum {
+  margin-top: 40px;
+}
 .post {
   position: relative;
   clear: both;
