--- a/assets/base.less
+++ b/assets/base.less
@@ -117,6 +117,9 @@
   .thread-body > .posts {
     margin:10px 20px;
   }
+  .admin-options {
+    margin:10px 20px;
+  }
   &.active {
     .thread-label {
       background-color: @color-standard-light-grey;
