--- a/assets/base.less
+++ b/assets/base.less
@@ -74,6 +74,10 @@
   }
   .post-reply-btn { float:left; margin-right:10px; }
   .post-user { margin-bottom:10px; }
+  .scale-numeric {
+    padding:0;
+
+  }
 }
 
 .thread {
